--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lucide": "^0.475.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
