--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-auth": "^5.0.0-beta.25",
+    "next-cloudinary": "^6.16.0",
     "next-remove-imports": "^1.0.12",
+    "parse": "^6.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/parse": "^3.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
